# GRay.v2

./: .gitignore  CMakeLists.txt  README.md
apps/: CMakeLists.txt  balls.cpp  final01.cpp  final02.cpp  main.cpp
include/GRay/: aabb.h  aarect.hpp  background.hpp  box.hpp  bvh.h  camera.hpp  color.hpp  constantMedium.hpp  hittable.hpp  hittableList.hpp  material.hpp  math.hpp  movingSphere.hpp  perlin.hpp  ray.hpp  rtweekend.hpp  sphere.hpp  texture.hpp  vec3.hpp
include/GRay.v2/: color.hpp  ray.hpp  vec3.hpp
include/stb/: rtw_stb_image.hpp
src/: CMakeLists.txt  math.cpp
tests/: CMakeLists.txt  testMathLib.cpp
